--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
+        "dotenv-webpack": "^8.0.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -21,7 +22,7 @@
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
         "vue-loader": "^15.10.1",
-        "vue-template-compiler": "^2.6.12",
-        "vue-router" : "^3.5.3"
+        "vue-router": "^3.5.3",
+        "vue-template-compiler": "^2.6.12"
     }
 }
