--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 MIX_BACKEND_URL=http://localhost:8000
+MIX_TOKEN_NAME=token_user
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
