feat : add user service to return the current user

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_URL=http://localhost
 MIX_BACKEND_URL=http://localhost:8000
 MIX_TOKEN_NAME=token_user
+MIX_TOKEN_NAME=_user
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
