--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "sass-loader": "^11.0.1",
         "vue": "^2.6.14",
         "vue-loader": "^15.9.8",
+        "vue-good-table": "^2.21.10",
         "vue-router": "^3.5.3",
         "vue-template-compiler": "^2.6.14",
         "vue-toast-notification": "^0.6.3"
-    }
+    },
+    "dependencies": {}
 }
