--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "vue-good-table": "^2.21.10",
         "vue-router": "^3.5.3",
         "vue-template-compiler": "^2.6.14",
-        "vue-toast-notification": "^0.6.3"
+        "vue-toast-notification": "^0.6.3",
+        "vuex": "^3.6.2"
     },
     "dependencies": {}
 }
